# RavenClaws

./: .dockerignore  .gitignore  .trivyignore  AGENTS.md  AUDIT-2026-06-03.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.slim  ISSUES.md  LICENSING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERIFICATION.md  WEBSITE.md  demo.cast  deny.toml  docker-bake.hcl  docker-compose.yml
.githooks/: pre-commit  pre-push  setup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  container.yml  security-scan.yml
LICENSES/: COMMERCIAL.txt
charts/ravenclaw/: Chart.yaml  values.yaml
charts/ravenclaw/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  rbac.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/ravenclaws/: values.yaml
charts/ravenclaws/templates/: NOTES.txt  configmap.yaml  deployment.yaml  pdb.yaml  rbac.yaml  serviceaccount.yaml
config/: litellm-config.yaml
demos/: demo-architecture.cast  demo-deployment.cast  demo-quickstart.cast  demo-resilience.cast  demo-server-mcp.cast
docs/guides/: configuration.md  demo.md  getting-started.md  heartbeat-mode.md  interaction-modes.md  llamacpp.md  mcp-integration.md  migration.md  server-mode.md  swarm-mode.md  verification.md  vllm.md  website.md
examples/: README.md  agent_loop.rs  basic_chat.rs  heartbeat.rs  mcp_client.rs  swarm.rs
k8s/: deployment-test.yaml  deployment.yaml
scripts/: build.sh  demo.sh  verify.sh
scripts/demos/: README.md  demo-architecture.sh  demo-deployment.sh  demo-quickstart.sh  demo-resilience.sh  demo-server-mcp.sh
scripts/lib/: common.sh  test-docker.sh  test-eval.sh  test-k8s.sh  test-linux.sh  test-litellm.sh  test-llm-quality.sh  test-local.sh  test-mcp.sh  test-performance.sh  test-provider-llamacpp.sh  test-provider-vllm.sh  test-security.sh  test-swarm.sh
src/: agent.rs  audit.rs  background.rs  config.rs  error.rs  eval.rs  healing.rs  heartbeat.rs  lib.rs  llm.rs  load.rs  main.rs  mcp.rs  patterns.rs  persistence.rs  plugins.rs  policy.rs  ravenfabric.rs  sandbox.rs  scheduler.rs  server.rs  swarm.rs  telemetry.rs  tools.rs
tests/config/: ravenclaw-k8s-test.toml  ravenclaw-multi-test.toml  ravenclaw-ollama-test.toml  ravenclaw-supervisor-test.toml  ravenclaw-swarm-test.toml  ravenclaw-test.toml  ravenclaws-k8s-test.toml  ravenclaws-multi-test.toml  ravenclaws-ollama-test.toml  ravenclaws-supervisor-test.toml  ravenclaws-swarm-test.toml  ravenclaws-test.toml
tests/eval/: basic-suite.toml  security-suite.toml
website/: DEPLOY.md  package.json  wrangler.jsonc
website/public/: 404.html  _headers  _redirects  index.html  robots.txt  site.webmanifest  sitemap.xml
website/public/assets/: main.js  styles.css
website/public/docs/: configuration.html  demo.html  getting-started.html  heartbeat-mode.html  index.html  interaction-modes.html  llamacpp.html  mcp-integration.html  migration.html  server-mode.html  swarm-mode.html  vllm.html
