[package]
name = "ravenclaw"
version = "0.1.0"
edition = "2021"
authors = ["Erling G M Kristiansen <egkristi@gmail.com>"]
description = "Lightweight, secure Rust agent framework with LiteLLM + RavenFabric"
license = "AGPL-3.0-or-later"
repository = "https://github.com/egkristi/RavenClaw"
keywords = ["agent", "ai", "llm", "liteLLM", "ravenfabric"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client (multi-provider LLM integration)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait for provider abstraction
async-trait = "0.1"

# UUID for request tracking
uuid = { version = "1.6", features = ["v4"] }

# RavenFabric integration (placeholder - actual crate TBD)
# ravenfabric = "0.1"

# Configuration
config = { version = "0.15", default-features = false, features = ["toml"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Security
rustls = "0.23"
zeroize = "1.8"

# Environment
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
