[package]
name = "ravenclaw"
version = "0.6.0"
edition = "2021"
authors = ["Erling G M Kristiansen <egkristi@gmail.com>"]
description = "Lightweight, secure Rust agent framework with multi-provider LLM support"
license = "AGPL-3.0-or-later"
repository = "https://github.com/egkristi/RavenClaw"
keywords = ["agent", "ai", "llm", "liteLLM", "ravenfabric"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client (multi-provider LLM integration)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait for provider abstraction
async-trait = "0.1"

# UUID for request tracking
uuid = { version = "1.6", features = ["v4"] }

# RavenFabric integration (placeholder - actual crate TBD)
# ravenfabric = "0.1"

# Configuration
config = { version = "0.15", default-features = false, features = ["toml"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Streaming
futures = "0.3"

# Environment
dotenvy = "0.15"

# HMAC-SHA256 for audit log chaining
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Date/time for audit timestamps
chrono = { version = "0.4", features = ["serde"] }

# Cryptographically secure random numbers
rand = "0.8"

# URL parsing for policy engine
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"
serial_test = "3.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
